--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,106 @@
+<!-- Link firebase -->
+<p>El link en firebase: https://aprendiendo-angular-1d64f.web.app  :")</p>
+<!-- Formulario -->
+<h1> Formulario </h1>
+<!-- Asignamos ngSubmit, este probiene de solamente
+  asignar en una variable el ngForm, y dentro de este el
+  botton submit es el que se conbierte en el ngSubmit -->
+<form (ngSubmit)="onRegiter()" #myForm ="ngForm" >
+  <div class="input-group">
+    <label for="name">Nombre: </label>
+    <input required name="name" type="text" id="name" [(ngModel)]="register.name" >
+    <p>Error introduce el nombre</p>
+  </div>
+  <div class="input-group">
+    <label for="email">Email: </label>
+    <input required name="email" type="email" id="email" [(ngModel)]="register.email" >
+    <p>Error introduce el email</p>
+  </div>
+  <div class="input-group">
+    <label for="password">Password: </label>
+    <input required name="password" type="password" id="password" [(ngModel)]="register.password" >
+    <p>Error introduce el password</p>
+  </div>
+
+  <!-- Si se quiere enviar el formulario -->
+  <!-- Evitar que se mande el formulario si los campo
+    no han sido llenados. ->
+    Esto con la propiedad disable con la condicion de que
+    si la variable creada sobre form llamada "myForm" es
+    invalid, sea disabled, de lo contrario "llenos los campos
+    se habilida, porque no se ocumple la condicion". -->
+  <button [disabled]="myForm.invalid" type="submit"> Registrarse </button>
+  <!-- Si va a enviar otra cosa, como la "localisación"
+    se le pone type="button" -->
+  <button type="button"> Otra acción </button>
+</form>
+
+<hr/>
+<!--
+<!-- NgClass -->
+<h2>NgClass y NgStyle</h2>
+<input type="text" required #nameInput4="ngModel" [(ngModel)]="Person.name">
+<p class="message-error" [class.invalid]="nameInput2.invalid">
+  El campo es requerido
+</p>
+<!-- NgClass sirve para agregar varias clases,
+  estas dentro de un objeto -->
+<hr class="line-error" [ngClass]="{
+  'valid': nameInput4.valid,
+  'invalid': nameInput4.invalid
+}"/>
+<!-- NgStyles -->
+<div class="styles">
+  <p> Modificamos el NgStyles de box</p>
+  <div>
+    <input type="number" [(ngModel)]="box.width">
+    <input type="number" [(ngModel)]="box.height">
+    <input type="color" [(ngModel)]="box.background">
+  </div>
+  <!-- Con NgStyles -->
+  <p> El resultado de los estilos en un div </p>
+  <div [ngStyle]="{
+    'width.px': box.width,
+    'height.px': box.height,
+    'background-color': box.background,
+    'display': 'block'
+  }">
+  </div>
+</div>
+<hr>
+<!-- Dynamic Class & Style -->
+<!-- Con medidas o unidades -->
+<p>Medidas e unidades</p>
+<div class="styles">
+  <div>
+    <input type="text" [(ngModel)]="whitdImg">
+  </div>
+  <div>
+    <img [style.width.px]="whitdImg" [src]="Person.avatar">
+  </div>
+</div>
+
+
+
+<label>Nombre</label>
+<input type="text" required #nameInput3="ngModel" [(ngModel)]="Person.name">
+<!-- Poner un estilo directo, se logra con el property
+  dibading sobre el setilo, punto y el estilo, luego la condicion -->
+<p [style.font-style]="nameInput3.invalid ? 'italic' : 'normal' ">Texto Texto Texto</p>
+
+<h2>Dynamic Class & Style</h2>
+<input type="text" required #nameInput2="ngModel" [(ngModel)]="Person.name">
+
+<!-- La condicion es que si sobre el input no tenemos algun valor,
+  la clase active se agrega.
+  Esto por el valor de la variable que obtiene el valor del input,
+  si el input esta vacio, se agrega la clase  -->
+
+<p class="message-error" [class.invalid]="nameInput2.invalid">
+  El campo es requerido
+</p>
+
+<hr/>
 
 <!-- *ngFor con objetos -->
 <h2>*ngFor con objetos</h2>
